@@ -1,4 +1,5 @@
 3.0.11
+ * Set RPC_READY to false when draining or if a node is marked as shutdown (CASSANDRA-12781)
  * AnticompactionRequestSerializer serializedSize is incorrect (CASSANDRA-12934)
  * Prevent reloading of logback.xml from UDF sandbox (CASSANDRA-12535)
 Merged from 2.2:
